[tool.poetry]
name = "wptscraper"
version = "0.1.0"
description = "World Padel Tour official site scraping tool"
authors = ["gontzalm <go.monasterio@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.21.3"
beautifulsoup4 = "^4.10.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
